--- a/package.json
+++ b/package.json
@@ -107,14 +107,14 @@
         "thingy-debug": "^0.0.1",
         "browser-sync": "^3.0.4",
         "clean-css-cli": "^5.6.3",
-        "gridjs": "^6.0.6",
         "html-minifier": "^4.0.0",
         "implicit-dom-connect": "^0.2.3",
         "pug-cli": "^1.0.0-alpha6",
         "purgecss": "^7.0.2",
         "stylus": "^0.64.0",
         "webpack": "^5.101.3",
-        "webpack-cli": "^6.0.1"
+        "webpack-cli": "^6.0.1",
+        "gridjs": "^6.2.0"
     },
     "thingytype": "pwa",
     "lang": "en"
