--- a/package.json
+++ b/package.json
@@ -96,25 +96,26 @@
     },
     "homepage": "https://github.com/JhonnyJason/management-list#readme",
     "dependencies": {
+        "browser-sync": "^3.0.4",
+        "clean-css-cli": "^5.6.3",
         "coffeescript": "^2.7.0",
+        "dayjs": "^1.11.19",
+        "gridjs": "6.0.6",
+        "html-minifier": "^4.0.0",
+        "implicit-dom-connect": "^0.2.3",
         "livescript": "^1.6.0",
         "npm-check-updates": "^19.1.2",
         "npm-run-all": "^4.1.5",
-        "thingy-allmodules-sync": "^0.2.0",
-        "thingy-module-gen": "^0.1.6",
-        "thingymodulecreate": "^0.1.8",
-        "thingysync": "^0.1.2",
-        "thingy-debug": "^0.0.1",
-        "browser-sync": "^3.0.4",
-        "clean-css-cli": "^5.6.3",
-        "html-minifier": "^4.0.0",
-        "implicit-dom-connect": "^0.2.3",
         "pug-cli": "^1.0.0-alpha6",
         "purgecss": "^7.0.2",
         "stylus": "^0.64.0",
+        "thingy-allmodules-sync": "^0.2.0",
+        "thingy-debug": "^0.0.1",
+        "thingy-module-gen": "^0.1.6",
+        "thingymodulecreate": "^0.1.8",
+        "thingysync": "^0.1.2",
         "webpack": "^5.103.0",
-        "webpack-cli": "^6.0.1",
-        "gridjs": "^6.2.0"
+        "webpack-cli": "^6.0.1"
     },
     "thingytype": "pwa",
     "lang": "en"
